functions/styles/searchMap.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
* {
    font-family: 'Roboto', sans-serif;
}

#map {
    height: 100%;
    transition: 0s;
}

body {
    background-color:#F8F8F8;

}

#error {
    color: red;
}

h1 {
    text-align: center;
    margin-bottom:1em;
}

.post {
    background-color:white;
    padding: 1em;
    border-bottom: 1px solid rgb(236, 236, 236);
}

.post:last-of-type{
    border:none;
}

#content {
    border-radius: 4px;
    background-color:white;
    margin: auto;
    height: 92%;
    max-width: 475px;
    max-height:500px;
    overflow-y:auto;
    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 5px 0 rgba(0, 0, 0, 0.1);
    pointer-events: all;
    opacity:98%;
}

#search {
    border-radius: 4px;
    background-color:white;
    margin: auto;
    height: 92%;
    max-width: 475px;
    max-height:500px;
    overflow-y:auto;
    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 5px 0 rgba(0, 0, 0, 0.1);
    pointer-events: all;
    opacity:98%;
}

#outer-content {
    border-radius: 4px;
    background-color:rgb(247, 247, 247);
    margin: auto;
    /* margin-top:1em; */
    height: 100%;
    max-width: 475px;
    max-height:500px;
    overflow-y:hidden;
    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 5px 0 rgba(0, 0, 0, 0.1);
    pointer-events: all;
    opacity:98%;
}

#outer-search {
    border-radius: 4px;
    background-color:rgb(247, 247, 247);
    margin: auto;
    /* margin-top:1em; */
    /* height: 100%; */
    max-width: 475px;
    max-height:500px;
    overflow-y:hidden;
    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 5px 0 rgba(0, 0, 0, 0.1);
    pointer-events: all;
    opacity:98%;
    height:175px;
}

#outer-tree-content {
    border-radius: 4px;
    background-color:rgb(247, 247, 247);
    margin: auto;
    /* margin-top:1em; */
    height: 81%;
    max-width: 475px;
    max-height:320px;
    min-height:320px;
    overflow-y:hidden;
    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 5px 0 rgba(0, 0, 0, 0.1);
    pointer-events: all;
    opacity:98%;
}

#trees-near-header, #trees-content-header, #tree-name {
    color:gray;
    font-size:110%;
    margin:10px;
    height:20px;
    display:block;

    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#tree-content {
    border-radius: 4px;
    background-color:white;
    margin: auto;
    height: 100%;
    max-width: 475px;
    max-height:300px;
    overflow-y:auto;
    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 5px 0 rgba(0, 0, 0, 0.1);
    pointer-events: all;
    opacity:98%;
}

.title {
    font-weight: 900;
    margin-bottom: 1em;
}

.date {
    text-align: right;
    font-style: italic;
    font-weight: 100;
    margin-top:1em;
    color:lightgray;
}

.distance {
    font-style: italic;
}

*::-webkit-scrollbar {
    display: none;
}

.map-container {
    z-index: -1;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;

}

.content-container {
    display:none;
    user-select: none;
    position: absolute;
    z-index: 0;
    left: 0;
    top: 0px;
    width:100%;
    height: 50%;
    overflow: visible;
    background-image: linear-gradient(to top, rgba(255, 255, 255, 0), rgb(243, 243, 243));
    pointer-events: none;
    padding: 1em;
    box-sizing:border-box;
}

.tree-overlay-container {
    display: none;
    user-select: none;
    position: absolute;
    z-index: 1;
    left: 0;
    top: 0px;
    width: 100%;
    height: 50%;
    overflow: visible;
    background-image: linear-gradient(to top, rgba(255, 255, 255, 0), rgb(243, 243, 243));
    pointer-events: none;
    padding: 1em;
    box-sizing:border-box;
}

.search-container {
    user-select: none;
    position: absolute;
    z-index: 1;
    left: 0;
    top: 0px;
    width: 100%;
    height: 50%;
    overflow: visible;
    background-image: linear-gradient(to top, rgba(255, 255, 255, 0), rgb(243, 243, 243));
    pointer-events: none;
    padding: 1em;
    box-sizing:border-box;
}

button {
    background: white;
    border: none;
    padding-right: 1em;
    padding-left: 1em;
    padding-top: 0.75em;
    padding-bottom:0.75em;
    height:50px;
    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1), 0 2px 4px 0 rgba(0, 0, 0, 0.1);
    border-radius:4px;
}

#main {
    overflow-y: scroll;
    padding-right:1em;
    padding-left: 1em;
    max-height:100%;
    height:198px;
}

button:hover {
    background:rgb(236, 236, 236);
}

#button-container {
    position: sticky;
    bottom:0;
    padding:1em;
    background-color:rgb(247, 247, 247);
    display:block;
    color: rgb(25,25,25);
    height:50px;
    box-shadow:         inset 0 8px 6px -6px rgba(0, 0, 0, 0.1);
}

#search-button-container {
    position: sticky;
    bottom:0;
    padding:1em;
    background-color:rgb(247, 247, 247);
    display:block;
    color: rgb(25,25,25);
    height:50px;
    box-shadow:         inset 0 8px 6px -6px rgba(0, 0, 0, 0.1);
}

#distance {
    font-style: italic;
}

#updated {
    font-style: italic;
    font-weight: 100;
    margin-top:1em;
    color:lightgray;
}

#body {
    font-size: 125%;
}

.dialogue {
    font-size: 125%;
    height:85%;
}

.error {
    color: rgb(219, 68, 55)
}

.svg-btn {
    width: 28px;
    height: 28px;
    position: absolute;
    left: 0;
    right: 1px;
    top:3px;
    bottom:0px;
    margin: auto
}

#hide-content-btn {
    height:17px;
    position:relative;
    top:2px;
    right:2px;
}

#hide-search-btn {
    height:17px;
    position:relative;
    top:2px;
    right:2px;
}


#species-name {
    background: white;
    margin-bottom:0.5em;
    position:sticky;
    top:0px;
}

#other-view-container {
    float:right;
}

#street-view-container {
    float:left;
}

#street-view-container>button {
    font-weight: bold;
}

#street-btn {
    width:100px;
}

#like-button-container {
    margin-left: 10px;
    float: left;
}

.likeButton {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
}

.likeCount {
    margin-left: 10px;
}

/* #content>.post:nth-child(2) {
    background-color: rgb(253, 253, 253);
}

#content>.post:nth-child(3) {
    background-color: rgb(251, 251, 251);
}

#content>.post:nth-child(4) {
    background-color: rgb(249, 249, 249);
}

#content>.post:nth-child(5) {
    background-color: rgb(247, 247, 247);
}

#content>.post:nth-child(6) {
    background-color: rgb(245, 245, 245);
}

#content>.post:nth-child(7) {
    background-color: rgb(243, 243, 243);
    border-bottom-color: rgb(234, 234, 234);
}

#content>.post:nth-child(8) {
    background-color: rgb(241, 241, 241);
    border-bottom-color: rgb(232, 232, 232);
}

#content>.post:nth-child(9) {
    background-color: rgb(239, 239, 239);
    border-bottom-color: rgb(230, 230, 230);
}

#content>.post:nth-child(n+10) {
    background-color: rgb(237, 237, 237);
    border-bottom-color: rgb(228, 228, 228);
} */

.tag {
    background:#ececec;
    color:black;
    padding: 0.5em;
    border-radius: 2em;
    font-size: 100%;
    width:80px;
    height:20px;
    display:inline-block;
    text-align:center;
}

#search-tags {
    width:100%;
    overflow-x:scroll;
    height:50px;
    white-space: nowrap;
}

.tag-selected {
    background: gray;
    color:white;
}

#species-search {
    display:none;
}

input {
    font-size:18px;
    width:72.6%;
    padding:10px;
    border-radius:4px;
    margin:auto;
    border-color:gainsboro;
    border-width:thin;
    border-style: solid;
        -webkit-appearance: none !important;
    -moz-appearance: none !important;
    appearance: none !important;
}

input:focus {
    outline: none;
    border: 1px solid #007ACC;
}

#search-bar {
    width:100%;
    box-sizing:border-box;
    padding:10px;
    display:flex;
}

#date-search-bar {
    width:100%;
    box-sizing:border-box;
    padding:10px;
    display:flex;
}

#loadmore{
    width:100%;
    color:lightgray;
    border:none;
    padding-top:2px;
    border-radius: 0px;
    font-weight:lighter;
    box-shadow:         inset 0 8px 6px -6px rgba(0, 0, 0, 0.1);
    background-color:rgb(247, 247, 247);
}

#search-history {
    display:block;
    max-height:55%;
    height:55%;
    overflow-y:scroll;
    float:left;
    width:100%;
    margin-top:14px;
    box-shadow:         inset 0 8px 6px -6px rgba(0, 0, 0, 0.1);
    background-color:rgb(247, 247, 247);
}
.search-history-item {
    width: 80%;
    border-bottom: 1px solid rgb(236, 236, 236);
    padding: 2em;
    padding-top:1em;
}

.search-query {
    float: left;
    width:150px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    color:gray;
}
.search-type {
    float:left;
    color:gainsboro;
    font-style: italic;
    margin-left:2em;
    font-weight:lighter;
}
.arrow-icon {
    float:right;
}
input::placeholder {
    color: gainsboro;
    font-style:italic;
    font-weight:lighter;
}

#query {
    float:left;
    /* border-right:none; */
    border-top-right-radius: 0;
    border-bottom-right-radius:0;
}

#query-year {
    float:left;
    /* border-right:none; */
    border-top-right-radius: 0;
    border-bottom-right-radius:0;
    /* width:70px; */
}

#query-month {
    float:left;
    /* border-right:none; */
    border-radius: 0;
    /* width:60px; */
}

#query-day {
    float:left;
    /* border-right:none; */
    border-radius: 0;
    /* width:60px; */
}
#search-btn {
    float:left;
    box-shadow:none;
    border-color:gainsboro;
    border-width:thin;
    border-style: solid;
    border-left:none;
    height:43.5px;
    /* margin-left:-2px; */
    border-top-left-radius: 0;
    border-bottom-left-radius:0;
    background:whitesmoke;
    width:22%;
    flex-grow:1;
}

.light {
    color:lightgrey;
    font-weight:lighter;
}

#tree-card-box {
    display: flex;
    flex-wrap: wrap;
}

.tree-card {
    padding-right:1em;
    padding-top:1em;
    padding-bottom:1em;
    flex-grow: 1;
}

.tree-card-label {
    color:lightgray;
    font-size:80%;
    flex-grow: 1;
}

.tree-card-data {
    font-size:110%;
    flex-grow: 1;
}

#tree-card-id {
    color:rgb(235, 235, 235);
    font-size:80%;
    display:block;
}
#details {
    text-align: center;
    display: none;
    height: 70%;
    padding-right:1em;
    padding-left: 1em;
}

.active {
    height: 85% !important;
}

.activeDetails {
    height: 95% !important;
    max-height: 95% !important;
}

.activeDetailsParent {
    height: 100% !important;
    max-height: 100% !important;
}

#textwrap {
    float: left;
}

